@@ -5,6 +5,7 @@ To download stable release, please use "switch tags" button and point to the lat
 == Head - unstable
 
 * CHANGED: replaced QuranNavigator with gq
+* CHANGED: gq.player.seek method param
 * NEW: added new gq.player.setting for jplayer settings and event triggering, now you can hook your custom events directly to player 
 
 == Release v3.3.0
